correction erreor view