@@ -1,5 +1,6 @@
 package example.services;
 
+
 import example.DTO.MouvementDTO;
 import example.DTO.RegleDTO;
 import example.DTO.ValiseDTO;
@@ -18,10 +19,13 @@ import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+
+
 @Service
 public class ValiseService implements IValiseService {
 
     private static final Logger log = LoggerFactory.getLogger(ValiseService.class);
+
 
     @Autowired
     private ValiseRepository valiseRepository;
@@ -34,93 +38,64 @@ public class ValiseService implements IValiseService {
 
     @Autowired
     private RegleRepository regleRepository;
-
     @Autowired
     private ClientRepository clientRepository;
+    @Autowired
+    private MouvementService mouvementService;
+
+
+    public ValiseService(ValiseRepository valiseRepository) {
+        this.valiseRepository = valiseRepository;
+    }
+
+    public boolean checkIfValiseExists(String numeroValise) {
+        return valiseRepository.existsByNumeroValise(numeroValise);
+    }
 
     @Override
     @Transactional
     public ValiseDTO createValise(ValiseDTO valiseDTO) {
         Valise valise = mapToEntity(valiseDTO);
 
-        // Associer le Type de Valise
-        if (valiseDTO.getTypeValiseId() != null) {
-            TypeValise typeValise = typeValiseRepository.findById(valiseDTO.getTypeValiseId())
-                    .orElseThrow(() -> new ResourceNotFoundException("TypeValise introuvable avec l'ID : " + valiseDTO.getTypeValiseId()));
-            valise.setTypeValise(typeValise);
-        }
-
-        // Associer les Mouvements
-        if (valiseDTO.getMouvementIds() != null && !valiseDTO.getMouvementIds().isEmpty()) {
+        // Vérification et ajout des mouvements (si présents)
+        if (valiseDTO.getMouvementIds() != null) {
             List<Mouvement> mouvements = mouvementRepository.findAllById(valiseDTO.getMouvementIds());
-            valise.setMouvements(mouvements);
+            valise.setMouvements(mouvements); // Associe les mouvements à la valise
+        } else {
+            valise.setMouvements(new ArrayList<>()); // Initialise une liste vide si aucun mouvement n'est fourni
         }
 
-        // Associer le Client
+
         if (valiseDTO.getClientId() != null) {
             Client client = clientRepository.findById(valiseDTO.getClientId())
                     .orElseThrow(() -> new ResourceNotFoundException("Client introuvable avec l'ID : " + valiseDTO.getClientId()));
-            valise.setClient(client);
+            valise.setClient(client); // Associe correctement le client
+        } else {
+            throw new ResourceNotFoundException("L'ID du client est requis");
         }
 
-        // Associer les Règles de Sortie
         if (valiseDTO.getRegleSortieIds() != null && !valiseDTO.getRegleSortieIds().isEmpty()) {
             Regle regle = regleRepository.findById(valiseDTO.getRegleSortieIds().get(0))
                     .orElseThrow(() -> new ResourceNotFoundException("Règle introuvable avec l'ID : " + valiseDTO.getRegleSortieIds().get(0)));
-            valise.setReglesSortie(regle);
+            valise.setReglesSortie(regle); // Associe la règle à la valise
+        } else {
+            valise.setReglesSortie(null); // Aucune règle associée
         }
 
-        // Sauvegarder la Valise
+
+
+        // Sauvegarde de la valise
         Valise savedValise = valiseRepository.save(valise);
+
         return mapToDTO(savedValise);
     }
 
+
+
+
     @Override
-    @Transactional
     public ValiseDTO updateValise(Integer id, ValiseDTO valiseDTO) {
-        Valise valise = valiseRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Valise introuvable avec l'ID : " + id));
-
-        // Mettre à jour les champs simples
-        valise.setDescription(valiseDTO.getDescription());
-        valise.setNumeroValise(String.valueOf(valiseDTO.getNumeroValise()));
-        valise.setSortie(valiseDTO.getSortie());
-        valise.setDateDernierMouvement(valiseDTO.getDateDernierMouvement());
-        valise.setDateSortiePrevue(valiseDTO.getDateSortiePrevue());
-        valise.setDateRetourPrevue(valiseDTO.getDateRetourPrevue());
-        valise.setDateCreation(valiseDTO.getDateCreation());
-        valise.setNumeroDujeu(valiseDTO.getNumeroDujeu());
-
-        // Mettre à jour le Type de Valise
-        if (valiseDTO.getTypeValiseId() != null) {
-            TypeValise typeValise = typeValiseRepository.findById(valiseDTO.getTypeValiseId())
-                    .orElseThrow(() -> new ResourceNotFoundException("TypeValise introuvable avec l'ID : " + valiseDTO.getTypeValiseId()));
-            valise.setTypeValise(typeValise);
-        }
-
-        // Mettre à jour les Mouvements
-        if (valiseDTO.getMouvementIds() != null) {
-            List<Mouvement> mouvements = mouvementRepository.findAllById(valiseDTO.getMouvementIds());
-            valise.setMouvements(mouvements);
-        }
-
-        // Mettre à jour le Client
-        if (valiseDTO.getClientId() != null) {
-            Client client = clientRepository.findById(valiseDTO.getClientId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Client introuvable avec l'ID : " + valiseDTO.getClientId()));
-            valise.setClient(client);
-        }
-
-        // Mettre à jour les Règles de Sortie
-        if (valiseDTO.getRegleSortieIds() != null && !valiseDTO.getRegleSortieIds().isEmpty()) {
-            Regle regle = regleRepository.findById(valiseDTO.getRegleSortieIds().get(0))
-                    .orElseThrow(() -> new ResourceNotFoundException("Règle introuvable avec l'ID : " + valiseDTO.getRegleSortieIds().get(0)));
-            valise.setReglesSortie(regle);
-        }
-
-        // Sauvegarder les modifications
-        Valise updatedValise = valiseRepository.save(valise);
-        return mapToDTO(updatedValise);
+        return null;
     }
 
     @Override
@@ -128,63 +103,208 @@ public class ValiseService implements IValiseService {
 
     }
 
-    @Override
     public ValiseDTO updateValise(int id, ValiseDTO valiseDTO) {
-        return null;
+        // Récupération de la valise existante
+        Valise valise = valiseRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Valise not found with ID: " + id));
+
+        // Mise à jour des champs simples
+        valise.setDescription(valiseDTO.getDescription());
+        valise.setNumeroValise(String.valueOf(valiseDTO.getNumeroValise()));
+        valise.setRefClient(valiseDTO.getRefClient());
+        valise.setSortie(valiseDTO.getSortie());
+        valise.setDateDernierMouvement(valiseDTO.getDateDernierMouvement());
+        valise.setDateSortiePrevue(valiseDTO.getDateSortiePrevue());
+        valise.setDateRetourPrevue(valiseDTO.getDateRetourPrevue());
+        valise.setDateCreation(valiseDTO.getDateCreation());
+        valise.setNumeroDujeu(valiseDTO.getNumeroDujeu());
+
+        // Mise à jour du type de valise
+        if (valiseDTO.getTypeValiseId() != null) {
+            TypeValise typeValise = typeValiseRepository.findById(valiseDTO.getTypeValiseId())
+                    .orElseThrow(() -> new ResourceNotFoundException("TypeValise not found with ID: " + valiseDTO.getTypeValiseId()));
+            valise.setTypeValise(typeValise);
+        }
+
+        // Gestion des mouvements
+        if (valiseDTO.getMouvementIds() != null) {
+            if (valise.getMouvements() == null) {
+                valise.setMouvements(new ArrayList<>());
+            }
+
+            // Supprimez les anciens mouvements qui ne sont plus présents
+            valise.getMouvements().removeIf(mouvement -> !valiseDTO.getMouvementIds().contains(mouvement.getId()));
+
+            // Ajoutez les nouveaux mouvements
+            for (Integer mouvementId : valiseDTO.getMouvementIds()) {
+                if (valise.getMouvements().stream().noneMatch(m -> m.getId().equals(mouvementId))) {
+                    Mouvement mouvement = mouvementRepository.findById(mouvementId)
+                            .orElseThrow(() -> new ResourceNotFoundException("Mouvement not found with ID: " + mouvementId));
+                    valise.getMouvements().add(mouvement);
+                }
+            }
+        }
+
+        // Mise à jour des règles de sortie
+        if (valiseDTO.getRegleSortieIds() != null && !valiseDTO.getRegleSortieIds().isEmpty()) {
+            Regle regle = regleRepository.findById(valiseDTO.getRegleSortieIds().get(0))
+                    .orElseThrow(() -> new ResourceNotFoundException("Regle not found with ID: " + valiseDTO.getRegleSortieIds().get(0)));
+            valise.setReglesSortie(regle);
+        } else {
+            valise.setReglesSortie(null);
+        }
+
+        // Mise à jour du client
+        if (valiseDTO.getClientId() != null) {
+            Client client = clientRepository.findById(valiseDTO.getClientId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Client not found with ID: " + valiseDTO.getClientId()));
+            valise.setClient(client);
+        } else {
+            throw new ResourceNotFoundException("Client ID is required");
+        }
+
+        // Enregistrement de la valise mise à jour
+        valiseRepository.save(valise);
+
+        return mapToDTO(valise);
     }
+
+
 
     @Override
     public ValiseDTO getValiseById(Integer id) {
-        return null;
+        Valise valise = valiseRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Valise not found"));
+
+        // Créez le ValiseDTO
+        ValiseDTO valiseDTO = new ValiseDTO();
+        valiseDTO.setId(valise.getId());
+        valiseDTO.setDescription(valise.getDescription());
+        valiseDTO.setMouvementList(mouvementService.getMouvementsByValiseId(valise.getId()));
+
+        // Si valise a une seule règle de sortie (pas une liste)
+        if (valise.getReglesSortie() != null) {
+            RegleDTO regleSortieDTO = convertRegleToDTO(valise.getReglesSortie());
+            valiseDTO.setReglesSortie(List.of(regleSortieDTO));  // Encapsuler dans une liste
+        }
+
+        return valiseDTO;
     }
 
-    @Override
+    // Méthode pour convertir un objet Regle en RegleDTO
+    private RegleDTO convertRegleToDTO(Regle regle) {
+        return RegleDTO.builder()
+                .id(regle.getId())
+                .coderegle(regle.getCoderegle())
+                .build();
+    }
+
     @Transactional
+    @Override
     public List<ValiseDTO> getAllValises() {
         List<Valise> valises = valiseRepository.findAll();
 
-        // Log des Valises
-        valises.forEach(v -> log.info("Valise ID: {}, TypeValise: {}, Mouvements: {}, Regles: {}",
-                v.getId(),
-                v.getTypeValise() != null ? v.getTypeValise().getDescription() : "Non défini",
-                v.getMouvements().size(),
-                v.getReglesSortie() != null ? v.getReglesSortie().getCoderegle() : "Non défini"));
+        // Log des valises récupérées
+        valises.forEach(v -> {
+            log.info("Valise ID: {}, Mouvements: {}", v.getId(), v.getMouvements());
+        });
 
         // Conversion des entités en DTOs
-        return valises.stream().map(this::mapToDTO).collect(Collectors.toList());
+        return valises.stream()
+                .map(v -> {
+                    log.info("Mapping valise: {}", v);
+                    ValiseDTO dto = mapToDTO(v);
+
+                    // Conversion des mouvements
+                    dto.setMouvementList(
+                            v.getMouvements()
+                                    .stream()
+                                    .map(mouvement -> {
+                                        log.info("Mapping mouvement: {}", mouvement);
+                                        return new MouvementDTO(
+                                                mouvement.getId(),
+                                                mouvement.getStatutSortie(),
+                                                mouvement.getDateHeureMouvement()
+                                        );
+                                    })
+                                    .toList()
+                    );
+
+                    // Conversion des règles
+                    dto.setReglesSortie(
+                            v.getReglesSortie() != null
+                                    ? List.of(new RegleDTO(
+                                    v.getReglesSortie().getId(),
+                                    v.getReglesSortie().getCoderegle()))
+                                    : null
+                    );
+
+                    return dto;
+                })
+                .collect(Collectors.toList());
     }
 
+
+
+    public ValiseDTO getValiseByIdWithMouvements(Integer id) {
+        Valise valise = valiseRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Valise not found"));
+
+        log.info("Mouvements associés à la valise {} : {}", valise.getId(), valise.getMouvements());
+
+        return mapToDTO(valise);
+    }
+
+
+    @Transactional
     @Override
     public void deleteValise(int id) {
-
+        if (!valiseRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Valise not found with ID: " + id);
+        }
+        valiseRepository.deleteById(id);
     }
 
+    // Conversion Valise vers ValiseDTO
     private ValiseDTO mapToDTO(Valise valise) {
         return ValiseDTO.builder()
                 .id(valise.getId())
                 .description(valise.getDescription())
                 .numeroValise(Integer.valueOf(valise.getNumeroValise()))
-                .refClient(valise.getClient() != null ? valise.getClient().getName() : "Non défini")
+                .refClient(valise.getClient() != null ? valise.getClient().getName() : null)
                 .sortie(valise.getSortie())
                 .dateDernierMouvement(valise.getDateDernierMouvement())
                 .dateSortiePrevue(valise.getDateSortiePrevue())
                 .dateRetourPrevue(valise.getDateRetourPrevue())
                 .dateCreation(valise.getDateCreation())
                 .numeroDujeu(valise.getNumeroDujeu())
-                .typeValiseDescription(valise.getTypeValise() != null ? valise.getTypeValise().getDescription() : "Non défini")
-                .mouvementList(valise.getMouvements().stream()
-                        .map(m -> new MouvementDTO(m.getId(), m.getStatutSortie(), m.getDateHeureMouvement()))
-                        .collect(Collectors.toList()))
-                .reglesSortie(valise.getReglesSortie() != null
-                        ? List.of(new RegleDTO(valise.getReglesSortie().getId(), valise.getReglesSortie().getCoderegle()))
-                        : null)
+                .mouvementList(
+                        valise.getMouvements().stream().map(mouvement -> {
+                            log.info("Mapping Mouvement ID: {}", mouvement.getId());
+                            return new MouvementDTO(
+                                    mouvement.getId(),
+                                    mouvement.getStatutSortie(),
+                                    mouvement.getDateHeureMouvement()
+                            );
+                        }).toList()
+                )
+                .reglesSortie(
+                        valise.getReglesSortie() != null
+                                ? List.of(new RegleDTO(
+                                valise.getReglesSortie().getId(),
+                                valise.getReglesSortie().getCoderegle()))
+                                : null
+                )
                 .build();
     }
+
+    // Conversion ValiseDTO vers Valise
 
     private Valise mapToEntity(ValiseDTO valiseDTO) {
         Valise valise = Valise.builder()
                 .description(valiseDTO.getDescription())
                 .numeroValise(String.valueOf(valiseDTO.getNumeroValise()))
+                .refClient(valiseDTO.getRefClient())
                 .sortie(valiseDTO.getSortie())
                 .dateDernierMouvement(valiseDTO.getDateDernierMouvement())
                 .dateSortiePrevue(valiseDTO.getDateSortiePrevue())
@@ -205,20 +325,12 @@ public class ValiseService implements IValiseService {
             valise.setMouvements(mouvements);
         }
 
-        // Associer le Type de Valise
-        if (valiseDTO.getTypeValiseId() != null) {
-            TypeValise typeValise = typeValiseRepository.findById(valiseDTO.getTypeValiseId())
-                    .orElseThrow(() -> new ResourceNotFoundException("TypeValise introuvable avec l'ID : " + valiseDTO.getTypeValiseId()));
-            valise.setTypeValise(typeValise);
-        }
-
-        // Associer les Règles de Sortie
-        if (valiseDTO.getRegleSortieIds() != null && !valiseDTO.getRegleSortieIds().isEmpty()) {
-            Regle regle = regleRepository.findById(valiseDTO.getRegleSortieIds().get(0))
-                    .orElseThrow(() -> new ResourceNotFoundException("Règle introuvable avec l'ID : " + valiseDTO.getRegleSortieIds().get(0)));
-            valise.setReglesSortie(regle);
-        }
-
+        // Logique similaire pour les règles, types de valise, etc.
         return valise;
+
     }
+
+
+
+
 }
